# uploadCD

./: .gitignore  README.md  backups.py  local.env  log_upload.csv  pyproject.toml  script.sh
data/: logs.csv
logs/: logs.csv
teste/: ata.txt
